--- a/src/pages/profile.njk
+++ b/src/pages/profile.njk
@@ -1,7 +1,10 @@
+---
+title: Profile
+---
 {% extends "base.njk" %}
 
 {% block content %}
 
-{{ collections.thing | consoleDump }}
+<h1>{{ title }}</h1>
 
 {% endblock %}
