--- a/src/pages/workshop.njk
+++ b/src/pages/workshop.njk
@@ -1,9 +1,10 @@
+---
+title: Billy's Mini Workshop
+---
 {% extends "base.njk" %}
 
-{% block content %}
+{% block contnet %}
 
 <h1>{{ title }}</h1>
-
-{{ image }}
 
 {% endblock %}
