--- a/src/includes/base.njk
+++ b/src/includes/base.njk
@@ -27,17 +27,7 @@
   {% if page.url == '/' %}
     {# Netlify CMS #}
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <script>
-      if (window.netlifyIdentity) {
-        window.netlifyIdentity.on("init", user => {
-          if (!user) {
-            window.netlifyIdentity.on("login", () => {
-              document.location.href = "/admin/";
-            });
-          }
-        });
-      }
-    </script>
+    <script src="/dist/scripts/netlify-cms.min.js"></script>
   {% endif %}
 </body>
 </html>
