--- a/src/styles/modules/_colors.scss
+++ b/src/styles/modules/_colors.scss
@@ -2,4 +2,9 @@ $oregon-green:      #05552f;
 $oregon-green-dark: #004122;
 $oregon-yellow:     #ffe70e;
 
-$border: #d9d9d9;
+$bg-light:    gray(90);
+$bg-lighter:  gray(96);
+
+$border: gray(94);
+
+$t: .2s ease-in-out;
