--- a/src/styles/modules/_fonts.scss
+++ b/src/styles/modules/_fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed:300,400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed:300,400,700|Material+Icons&display=swap');
 
 @font-face {
   font-family: BellottiBold;
