--- a/src/styles/layout/_root.scss
+++ b/src/styles/layout/_root.scss
@@ -1,9 +1,16 @@
+@use '../modules/media-queries' as *;
 @use '../modules/fonts';
 
 @import 'https://meyerweb.com/eric/tools/css/reset/reset.css';
 
 body {
   font-family: fonts.$default;
+}
+
+article {
+  max-width: $desktop-width;
+  margin-inline: auto;
+  padding: 1rem;
 }
 
 img {
