added cloudinary url

--- a/src/includes/page-layout.njk
+++ b/src/includes/page-layout.njk
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<article>
+<article id="page-layout">
   <header class="Heading">
     <h1>{{ title }}</h1>
   </header>
