--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -12,7 +12,7 @@
       <a
         class="Gallery__image"
         href="{{ thing.data.page.url }}"
-        style="background-image: url('{{ image.image }}');"
+        style="background-image: url('{{ image.image | cloudinary('w_300') }}');"
       ></a>
     {% endfor %}
   {% endfor %}
