thing gallery styling

--- a/src/includes/base.njk
+++ b/src/includes/base.njk
@@ -22,6 +22,8 @@
     {% block content %}{% endblock %}
   </main>
 
+  {% include "footer.njk" %}
+
   <scripts src="/dist/scripts/main.min.js"></scripts>
   {% block scripts %}{% endblock %}
 
