--- a/src/styles/modules/_colors.scss
+++ b/src/styles/modules/_colors.scss
@@ -2,9 +2,14 @@ $oregon-green:      #05552f;
 $oregon-green-dark: #004122;
 $oregon-yellow:     #ffe70e;
 
+$border: gray(94);
+
 $bg-light:    gray(90);
 $bg-lighter:  gray(96);
 
-$border: gray(94);
+$box-shadow: 0 10px 20px rgba(#000, .1);
+
+$text-light:    gray(50);
+$text-lighter:  gray(80);
 
 $t: .2s ease-in-out;
