--- a/src/includes/thing-layout.njk
+++ b/src/includes/thing-layout.njk
@@ -7,16 +7,24 @@
 {% block content %}
 <article id="thing-layout">
 
-  <section id="thing-info-section">
+  <header class="Heading">
     <h1>{{ title }}</h1>
-  </section>
+  </header>
 
-  <section id="thing-image-section">
+  <section>
     <div class="Images">
       {% for image in images %}
         <figure class="Image">
-          <img src="{{ image.image | cloudinary('w_1000') }}" alt="{{ image.description }}">
-          <figcaption>{{ image.description }}</figcaption>
+          <img
+            src="{{ image.image | cloudinary('w_600') }}"
+            alt="{{ image.description }}"
+            loading="lazy"
+            width="300"
+          >
+          <figcaption>
+            {% mi 'photo' %}
+            <span>{{ image.description }}</span>
+          </figcaption>
         </figure>
       {% endfor %}
     </div>
