--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -56,7 +56,7 @@
   display: grid;
   align-items: center;
   justify-content: flex-start;
-  padding-left: 1rem;
+  padding-inline-start: 1rem;
 }
 
 .🎩__menu-toggle {
