--- a/src/styles/layout/_markdown.scss
+++ b/src/styles/layout/_markdown.scss
@@ -5,7 +5,7 @@ $h: 'h2, h3, h4, h5, h6';
   line-height: 1.3em;
 
   & > :matches(p, h1, #{ $h }) {
-    margin-bottom: 1rem;
+    margin-block-end: 1rem;
   }
 }
 
