renamed classes, updated markdown

--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -8,22 +8,22 @@
   </h1>
 
   <div class="🎩__menu">
-    <input id="🎩__menu-checkbox" type="checkbox">
-    <label class="🎩__menu-toggle" for="🎩__menu-checkbox">
+    <input id="sidebar-checkbox" type="checkbox">
+    <label class="Sidebar-toggle" for="sidebar-checkbox">
       {% mi 'menu' %}
     </label>
 
-    <label class="🎩__menu-overlay" for="🎩__menu-checkbox"></label>
+    <label class="Sidebar-overlay" for="sidebar-checkbox"></label>
 
-    <div class="🎩__menu-contents">
-      <nav class="🎩__menu-nav">
+    <div class="Sidebar">
+      <nav class="Sidebar-nav">
         <a href="/">Home</a>
         <a href="/things">Things</a>
         <a href="/workshop">Billy's Mini Workshop</a>
         <a href="/profile">Profile</a>
       </nav>
 
-      <label class="🎩__menu-close" for="🎩__menu-checkbox">
+      <label class="Sidebar-close" for="Sidebar-checkbox">
         {% mi 'close' %} close
       </label>
     </div>
