--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -2,7 +2,7 @@
 @use '../modules/colors' as *;
 @use '../modules/fonts';
 
-@use '../components/menu-contents';
+@use '../components/sidebar';
 
 .🎩 {
   display: grid;
@@ -47,52 +47,10 @@
   }
 }
 
-/*
-  menu
-*/
-
 .🎩__menu {
   grid-area: menu;
   display: grid;
   align-items: center;
   justify-content: flex-start;
   padding-inline-start: 1rem;
-}
-
-.🎩__menu-toggle {
-  cursor: pointer;
-  padding: .5ch 1ch;
-  color: $oregon-yellow;
-  font-size: 24px;
-}
-
-#🎩__menu-checkbox {
-  display: none;
-
-  &:not(:checked) {
-    & ~ .🎩__menu-contents {
-      transform: translateX(-100%);
-    }
-
-    & ~ .🎩__menu-overlay {
-      pointer-events: none;
-      opacity: 0;
-    }
-  }
-}
-
-.🎩__menu-contents {
-  position: fixed;
-  z-index: 1;
-  left: 0; top: 0; bottom: 0;
-  background-color: #fff;
-  transition: transform $t;
-}
-
-.🎩__menu-overlay {
-  position: fixed;
-  z-index: 0;
-  inset: 0;
-  background-color: rgba(#000, .8);
-  transition: opacity $t;
 }
