--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -3,7 +3,7 @@
 .Sidebar-toggle {
   cursor: pointer;
   padding: .5ch 1ch;
-  color: $oregon-yellow;
+  color: $duck-yellow;
   font-size: 24px;
 }
 
