--- a/src/styles/modules/_colors.scss
+++ b/src/styles/modules/_colors.scss
@@ -1,6 +1,6 @@
-$oregon-green:      #05552f;
-$oregon-green-dark: #004122;
-$oregon-yellow:     #ffe70e;
+$duck-green:      #05552f;
+$duck-green-dark: #004122;
+$duck-yellow:     #ffe70e;
 
 $border: gray(94);
 
