--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,8 +1,10 @@
+@use '../modules/colors' as *;
 @use '../modules/media-queries' as *;
 
 .Gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(var(--min, 250px), 1fr));
+  gap: 1px;
 
   @media ($tablet) { --min: 200px; }
   @media ($mobile) { --min: 150px; }
