--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -4,5 +4,5 @@ permalink: /
 {% extends 'base.njk' %}
 
 {% block content %}
-  <!-- <h1>{{ site.title }}</h1> -->
+  <h1>{{ site.title }}</h1>
 {% endblock %}
