--- a/src/pages/admin/index.njk
+++ b/src/pages/admin/index.njk
@@ -7,10 +7,11 @@
 
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
-  <title>{{ title or site.title }} Admin Panel</title>
+  <title>Admin | {{ site.title }}</title>
 </head>
 
 <body>
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
 </body>
+
 </html>
