--- a/src/layouts/content.njk
+++ b/src/layouts/content.njk
@@ -1,8 +1,5 @@
----
-permalink: /
----
 {% extends 'base.njk' %}
 
 {% block content %}
-  <h1>{{ site.title.long }}</h1>
+  {{ content | safe }}
 {% endblock %}
