--- a/src/pages/admin/index.njk
+++ b/src/pages/admin/index.njk
@@ -7,7 +7,7 @@
 
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
-  <title>Admin | {{ site.title }}</title>
+  <title>Admin | {{ site.title.long }}</title>
 </head>
 
 <body>
