--- a/src/pages/things.njk
+++ b/src/pages/things.njk
@@ -1,8 +1,8 @@
 ---
-permalink: /
+title: Things
 ---
 {% extends 'base.njk' %}
 
 {% block content %}
-  <h1>{{ site.title.long }}</h1>
+
 {% endblock %}
