--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -1,6 +1,6 @@
 {%- from 'icons/menu.njk' import menu_icon -%}
 
-<header class="flex items-center text-center bg-gradient-to-b from-green-dark to-green-DEFAULT sticky top-0 text-yellow-DEFAULT">
+<header class="flex items-center text-center bg-gradient-to-b from-green-dark to-green-DEFAULT sticky top-0 z-10 text-yellow-DEFAULT">
   <label for="sitenav-opened" class="cursor-pointer p-4 pr-0">
     {{ menu_icon('class="h-8"') }}
   </label>
