--- a/src/includes/nav.njk
+++ b/src/includes/nav.njk
@@ -1,10 +1,10 @@
 <input id="sitenav-opened" type="checkbox" hidden>
-<label for="sitenav-opened" class="sitenav-overlay fixed inset-0 bg-black bg-opacity-75 transition-opacity duration-200"></label>
+<label for="sitenav-opened" class="sitenav-overlay fixed z-10 inset-0 bg-black bg-opacity-75 transition-opacity duration-200"></label>
 
-<div class="sitenav fixed inset-y-0 left-0 sitenav bg-white h-full text-center transform transition-transform duration-200">
+<div class="sitenav fixed z-10 inset-y-0 left-0 sitenav bg-white h-full text-center transform transition-transform duration-200">
   <nav>
     {%- set sitenav_item_class -%}
-      class="sitenav-item block p-2 border-solid border-b border-gray-300 hover:bg-gray-200"
+      class="sitenav-item block p-2 border-solid border-b border-gray-300 hover:bg-gray-200 active:bg-gray-400"
     {%- endset -%}
 
     <a {{ sitenav_item_class | trim | safe }} href="/">Home</a>
