--- a/src/pages/things.njk
+++ b/src/pages/things.njk
@@ -7,10 +7,27 @@ title: Things
 <section>
   <h1 class="title">{{ title }}</h1>
 
-  <ul>
+  <ul class="grid md:grid-cols-2 gap-4">
     {% for thing in collections.thing | reverse -%}
-      <li>
-        <a href="{{ thing.data.page.url }}">{{ thing.data.title }}</a>
+      <li class="flex items-center pb-4 border-solid border-b border-gray-200">
+        <a href="{{ thing.data.page.url }}" class="mr-4 fade">
+          {%- set image = thing.data.images[0] -%}
+          <img
+            class="rounded-sm shadow-lg"
+            {{ image.image | srcset([100,200,300], 'ar_1,c_fill,g_auto') | safe }}
+            src="{% cloudinary 'w_100,ar_1,c_fill,g_auto' %}{{ image.image }}"
+            alt="{{ image.description }}"
+            width="100" height="100"
+            draggable="false"
+          />
+        </a>
+
+        <div>
+          <a href="{{ thing.data.page.url }}" class="font-serif text-xl bg-fade">{{ thing.data.title }}</a>
+          {% if thing.data.description -%}
+            <p class="text-gray-700 leading-5 text-sm">{{ thing.data.description }}</p>
+          {% endif -%}
+        </div>
       </li>
     {% endfor -%}
   </ul>
