--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -1,3 +1,5 @@
-<footer class="text-center text-sm text-gray-500 p-4">
-  © {{ site.title.long }} {{ year }}
+<footer class="text-center pb-env-b">
+  <div class="text-sm text-gray-500 p-4">
+    © {{ site.title.long }} {{ year }}
+  </div>
 </footer>
