--- a/src/layouts/thing.njk
+++ b/src/layouts/thing.njk
@@ -30,7 +30,7 @@
             loading="lazy"
           />
           <figcaption class="absolute inset-0 m-4 flex flex-row items-end content-end">
-            <span class="bg-white px-2 py-1 rounded-sm sticky bottom-4 bg-opacity-75 shadow-md">{{ image.description }}</span>
+            <span class="bg-white px-2 py-1 rounded-sm md:sticky bottom-4 bg-opacity-75 shadow-md">{{ image.description }}</span>
           </figcaption>
         </figure>
       {% endfor -%}
