--- a/src/pages/admin/index.njk
+++ b/src/pages/admin/index.njk
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-  <script src="https://unpkg.com-cms@^2.0.0/dist-cms.js"></script>
+  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  <script>
+    CMS.registerPreviewStyle('/dist/admin.css');
+  </script>
 </body>
 
 </html>
