--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -6,9 +6,9 @@ permalink: /
 {% block content %}
 <section>
   <div class="grid gap-px grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6">
-    {% for thing in collections.thing -%}
+    {% for thing in collections.thing | reverse -%}
       {% for image in thing.data.images -%}
-        <figure>
+        <a href="{{ thing.data.page.url }}" class="fade">
           <img
             class="block w-full object-contain"
             {{ image.image | srcset([100,200,300], 'ar_1,c_fill,g_auto') | safe }}
@@ -16,7 +16,7 @@ permalink: /
             alt="{{ image.description }}"
             loading="lazy" draggable="false"
           />
-        </figure>
+        </a>
       {% endfor -%}
     {% endfor -%}
   </div>
