--- a/src/layouts/thing.njk
+++ b/src/layouts/thing.njk
@@ -12,7 +12,7 @@
         <div>{{ description | nl2br }}</div>
       {% endif -%}
 
-      <hr class="mb-4">
+      <hr class="my-6">
 
       <a href=".." class="bg-fade">{{ chevron_left_icon('class="h-4 inline-block"') }} Back to Things</a>
     </div>
