--- a/src/pages/admin/index.njk
+++ b/src/pages/admin/index.njk
@@ -13,7 +13,8 @@
 <body>
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   <script>
-    CMS.registerPreviewStyle('/dist/admin.css');
+    CMS.registerPreviewStyle('/dist/styles/tailwind.css');
+    CMS.registerPreviewStyle('/dist/styles/admin.css');
   </script>
 </body>
 
